--- a/client/styles.css
+++ b/client/styles.css
@@ -22,8 +22,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.85);
   color: white;
   font-family: "Press Start 2P", monospace;
@@ -182,8 +182,8 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background: rgba(0, 0, 0, 0.8);
   color: white;
   font-family: "Press Start 2P", monospace;
@@ -309,8 +309,8 @@ body {
   z-index: 9999;
   background: #000;
   color: #fff;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   font-size: 2rem;
   justify-content: center;
   align-items: center;
