--- a/client/styles.css
+++ b/client/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --vh: 100vh; /* fallback */
+}
+
 html,
 body {
   overscroll-behavior: none;
@@ -67,7 +71,7 @@ body {
   position: absolute;
   top: 50px;
   left: 0;
-  width: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   height: 150px;
   display: flex;
   justify-content: space-around;
