--- a/client/styles.css
+++ b/client/styles.css
@@ -27,7 +27,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   background: rgba(0, 0, 0, 0.85);
   color: white;
   font-family: "Press Start 2P", monospace;
@@ -62,7 +62,7 @@ body {
 .game-container {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   background: url("img/bg1.jpg"); /* Optional background */
   background-size: cover;
 }
@@ -188,7 +188,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   background: rgba(0, 0, 0, 0.8);
   color: white;
   font-family: "Press Start 2P", monospace;
@@ -321,8 +321,8 @@ body {
 }
 
 #rotate-notice img {
-  max-width: 80vw;
-  max-height: 80vh;
+  max-width: 100vw;
+  max-height: 100vh;
   object-fit: contain;
 }
 
