--- a/client/styles.css
+++ b/client/styles.css
@@ -71,7 +71,7 @@ body {
   position: absolute;
   top: 50px;
   left: 0;
-  height: calc(var(--vh, 1vh) * 100);
+  width: 100%;
   height: 150px;
   display: flex;
   justify-content: space-around;
