--- a/client/styles.css
+++ b/client/styles.css
@@ -64,7 +64,7 @@ body {
   width: 100vw;
   height: calc(var(--vh, 1vh) * 100);
   background: url("img/bg1.jpg"); /* Optional background */
-  background-size: contain;
+  background-size: 100% auto;
 }
 
 .hen-row {
@@ -428,7 +428,7 @@ body {
 
   .game-container {
     background-image: url("img/bg11.jpg");
-    background-size: contain; /* or: 100% auto */
+    background-size: 100% auto;
     background-position: bottom center;
     background-repeat: no-repeat;
   }
