--- a/client/styles.css
+++ b/client/styles.css
@@ -65,6 +65,8 @@ body {
   height: calc(var(--vh, 1vh) * 100);
   background: url("img/bg1.jpg"); /* Optional background */
   background-size: 100% auto;
+  background-position: bottom center;
+  background-repeat: no-repeat;
 }
 
 .hen-row {
