--- a/client/styles.css
+++ b/client/styles.css
@@ -334,6 +334,13 @@ body {
     font-size: 14px;
   }
 
+  .game-container {
+    background-image: url("img/bg11.jpg");
+    background-size: 100% auto;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+  }
+
   .hen-row {
     top: 20px;
     height: 100px;
